[gd_scene load_steps=2 format=3 uid="uid://dooas12bdmmkm"]

[ext_resource type="Script" path="res://Scripts/gender_interact_item.gd" id="1_2h878"]

[node name="InteractSelection" type="HBoxContainer"]
custom_minimum_size = Vector2(384, 40)
offset_right = 384.0
offset_bottom = 40.0
script = ExtResource("1_2h878")

[node name="GivingLabel" type="Label" parent="."]
visible = false
layout_mode = 2

[node name="GivingGenderOptionButton" type="OptionButton" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "/"

[node name="ReceivingOptionButton" type="OptionButton" parent="."]
layout_mode = 2
size_flags_horizontal = 3
disabled = true

[node name="ReceivingLabel" type="Label" parent="."]
visible = false
layout_mode = 2

[node name="AcceptButton" type="Button" parent="."]
layout_mode = 2
size_flags_vertical = 4
text = "Save"
